<resources>
    <string name="app_name">基金助手</string>
    <string name="remind">提示</string>
    <string name="ok">确定</string>
    <string name="splash_text">永远相信美好的事情即将发生</string>
    <string name="fund_scale">基金规模</string>
    <string name="fund_manager">基金经理</string>
    <string name="asset_manager">资产配置</string>
    <string name="latest_value">最新净值(%s)</string>
    <string name="increase_value">日涨幅</string>
    <string name="login">一键登录</string>
    <string name="click_to_add_data">点击添加数据</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">自选</string>
    <string name="title_news">资讯</string>
    <string name="title_user">个人</string>
    <string name="news_commentsize">%1$s评论</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>

</resources>
