<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.hukecn.activity.ui.user.UserFragment">
    <LinearLayout
        android:id="@+id/llyt_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/actionbar_bac">
        <ImageView
            android:id="@+id/iv_web_icon"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:scaleType="fitXY"
            android:src="@drawable/icon"
            android:padding="@dimen/dp_3"
            android:background="@drawable/shape_circle_bac"/>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llyt_info"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray"
            android:layout_marginTop="@dimen/dp_60"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textSize="@dimen/sp_18"
                android:paddingLeft="@dimen/dp_15"
                android:gravity="center_vertical|left"
                android:textColor="@color/black"
                android:text="@string/about"/>

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_arrow_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_15"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textSize="@dimen/sp_18"
                android:paddingLeft="@dimen/dp_15"
                android:textColor="@color/black"
                android:gravity="center_vertical|left"
                android:text="@string/setting"/>

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_arrow_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_15"
                />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>