<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar_bac">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_8"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_8"
        android:background="@drawable/shape_title_bac"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_fund_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/sp_18" />
        <TextView
            android:id="@+id/tv_fund_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_below="@+id/tv_fund_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitesmoke"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlyt_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">
            <TextView
                android:id="@+id/tv_latest_value_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/white"
                android:text="@string/latest_value"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/tv_latest_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_latest_value_title"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_28"
                android:text="88888"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/tv_increase_value_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/increase_value"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/tv_increase_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_latest_value_title"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_28"
                android:textColor="@color/white"
                android:text="88888"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/value_tab_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:tabBackground="@color/gainsboro"
            app:tabIndicatorColor="@color/actionbar_bac">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="单位净值"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="累计净值"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="累计收益率"/>

        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="近一月:"/>

            <TextView
                android:id="@+id/tv_one_month_earn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:layout_marginLeft="@dimen/dp_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="近三个月:"/>

            <TextView
                android:id="@+id/tv_three_month_earn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:layout_marginLeft="@dimen/dp_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="近六个月:"/>

            <TextView
                android:id="@+id/tv_six_month_earn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:layout_marginLeft="@dimen/dp_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="近一年:"/>

            <TextView
                android:id="@+id/tv_year_earn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:layout_marginLeft="@dimen/dp_5"/>
        </LinearLayout>


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/mLineChar"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_height="@dimen/dp_300" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/black"/>
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="true"
                    android:background="@drawable/selector_radio_btn_bac"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:text="近一个月"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton_three_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="近三个月"
                    android:background="@drawable/selector_radio_btn_bac"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton_six_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="近六个月"
                    android:background="@drawable/selector_radio_btn_bac"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButton_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="近一年"
                    android:background="@drawable/selector_radio_btn_bac"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="@color/black" />
            </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:padding="@dimen/dp_10"
                android:text="@string/fund_scale"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/black"/>
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bar_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:padding="@dimen/dp_10"
                android:text="@string/fund_manager"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:background="@color/black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10">
                <ImageView
                    android:id="@+id/iv_manager_header"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/tv_manager_name"
                    android:layout_below="@+id/iv_manager_header"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/tv_manager_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:layout_alignParentRight="true"
                    android:progressTint="@color/actionbar_bac"/>

                <TextView
                    android:id="@+id/tv_manage_time"
                    android:layout_below="@+id/tv_manager_star"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:padding="@dimen/dp_10"
                android:text="@string/asset_manager"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:background="@color/black"/>
        </LinearLayout>


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>